src/test/contracts/negative/vars_consts/assign_const_params.ligo
function foo(const x : int; var y : int) : int is
  {
    x := 4;
    y := 3;
  } with x + y
